# AutoLife

./: .env.example  .gitignore  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  pyproject.toml  pytest.ini  test_asr.py  test_audio_recorder.py  test_e2e.py  test_mvp.py  test_tts.py
.trae/documents/: Remove Voice Input Functionality and Documentation.md
autolife-web/: index.html  package-lock.json  package.json  vite.config.ts
autolife-web/src/: App.css  App.tsx  index.css
autolife-web/src/components/: ActivityCard.tsx  ActivityPanel.tsx  ActivityTimeline.tsx  CategoryFilter.tsx  ChatPanel.tsx  ConversationHistory.tsx  ConversationPanel.tsx  DietComponents.tsx  EnhancedChatPanel.tsx  QuickActions.tsx  ScrcpyPanel.tsx  ScrcpyPlayer.tsx  ScreenMirror.tsx  ScreencastPanel.tsx  StepsPanel.tsx  ThreeColumnLayout.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx  TwoColumnLayout.tsx  VoiceControl.tsx
autolife-web/src/hooks/: useAudioRecorder.ts  useScrcpy.ts
autolife-web/src/services/: api.ts  sse.ts
autolife-web/src/store/: appStore.ts  voiceStore.ts
autolife-web/src/types/: index.ts  jmuxer.d.ts  recorder-js.d.ts
autolife-web/src/utils/: activityAnalyzer.ts  mockSSE.ts  storage.ts
docs/: ROADMAP.md  fix-env-loading.md  frontend.md  quickstart.md  stage1-completion-report.md  stage2-completion-report.md  voice-testing-report.md  投屏功能技术难点.md
examples/: basic_usage.py
scripts/: verify_setup.sh
src/: __init__.py  cli.py
src/autolife/: __init__.py  agent.py  cli.py
src/autolife/api/: __init__.py  dependencies.py  main.py  models.py
src/autolife/api/routes/: __init__.py  agent.py  health.py  scrcpy.py  voice.py
src/autolife/scrcpy/: __init__.py  manager.py  streamer.py
src/autolife/voice_agent/: agent.py
src/autolife/voice_agent/asr/: __init__.py  zhipu.py
src/autolife/voice_agent/audio/: __init__.py  recorder.py
src/autolife/voice_agent/tts/: __init__.py  zhipu.py
src/autolife/voice_agent/wakeword/: __init__.py  detector.py
src/voice_agent/: __init__.py  agent.py
src/voice_agent/asr/: base.py  zhipu.py
src/voice_agent/tts/: __init__.py  base.py  zhipu.py
tests/: README.md  conftest.py  test_asr.py  test_audio_recorder.py  test_tts.py
